--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -49,7 +49,7 @@
     <div class="header-inner">
      <div class="site-meta custom-logo">
       <div class="custom-logo-site-title">
-       <a href="#" class="brand" rel="start" style="opacity: 1;"> <span class="logo-line-before"><i class="" style="transform: translateX(100%);"></i></span> <span class="site-title" style="opacity: 1; top: 0px;">剑试天下</span> <span class="logo-line-after"><i class="" style="transform: translateX(-100%);"></i></span> </a>
+       <a href="{% url 'app:index' %}" class="brand" rel="start" style="opacity: 1;"> <span class="logo-line-before"><i class="" style="transform: translateX(100%);"></i></span> <span class="site-title" style="opacity: 1; top: 0px;">剑试天下</span> <span class="logo-line-after"><i class="" style="transform: translateX(-100%);"></i></span> </a>
       </div>
       <h1 class="site-subtitle" itemprop="description" style="opacity: 1; top: 0px;"></h1>
      </div>
@@ -58,11 +58,11 @@
      </div>
      <nav class="site-nav">
       <ul id="menu" class="menu">
-       <li class="menu-item menu-item-home menu-item-active" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'index' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-home"></i> <br /> 首页 </a> </li>
-       <li class="menu-item menu-item-categories" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'categories' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-th"></i> <br /> 分类 </a> </li>
-       <li class="menu-item menu-item-archives" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'archives' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-archive"></i> <br /> 归档 </a> </li>
-       <li class="menu-item menu-item-tags" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'tags' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-tags"></i> <br /> 标签 </a> </li>
-       <li class="menu-item menu-item-about" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'about' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-user"></i> <br /> 关于 </a> </li>
+       <li class="menu-item menu-item-home menu-item-active" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'app:index' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-home"></i> <br /> 首页 </a> </li>
+       <li class="menu-item menu-item-categories" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'app:categories' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-th"></i> <br /> 分类 </a> </li>
+       <li class="menu-item menu-item-archives" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'app:archives' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-archive"></i> <br /> 归档 </a> </li>
+       <li class="menu-item menu-item-tags" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'app:tags' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-tags"></i> <br /> 标签 </a> </li>
+       <li class="menu-item menu-item-about" style="opacity: 1; transform: translateY(0px);"> <a href="{% url 'app:about' %}" rel="section"> <i class="menu-item-icon fa fa-fw fa-user"></i> <br /> 关于 </a> </li>
       </ul>
      </nav>
     </div>
