添加blog字数统计

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,7 +19,7 @@
            <div class="post-wordcount">
             <span class="post-meta-item-icon"> <i class="fa fa-file-word-o"></i> </span>
             <span class="post-meta-item-text">字数统计</span>
-            <span title="字数统计"> 1,399 </span>
+            <span title="字数统计"> {{ article.words }} </span>
            </div>
           </div>
          </header>
